--- a/Figure_5.6
+++ b/Figure_5.6
@@ -12,10 +12,20 @@
 
             Student student1 = new Student("Jane Green", 93);
             Student student2 = new Student("John Blue", 72);
+            Student student3 = new Student("Brooke Gordon", 98);
+
+            //Display Student 1's informaton
             Console.Write($"{student1.Name}'s letter grade equivalent of ");
             Console.WriteLine($"{student1.Average} is {student1.LetterGrade}");
+
+            //Display Student 2's information
             Console.Write($"{student2.Name}'s letter grade equivalent of ");
             Console.WriteLine($"{student2.Average} is {student2.LetterGrade}");
+
+            //Display Student 3's Information
+            Console.WriteLine($"{student3.Name}'s letter grade equivalent of");
+            Console.WriteLine($"{student3.Average} is {student3.LetterGrade}");
+
         }
     }
 
